# light-types

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml
src/_bool_query/: __init__.py  _base.py  _interface.py  _length_q.py  _numeric_q.py
src/_bool_query/_logical/: __init__.py  _and.py  _mixin.py  _not.py  _or.py
src/_bool_query/_string_q/: __init__.py  _length_q.py  _string_q.py  _types.py
src/light_types/: __init__.py  _base.py  _light_type.py  _meta.py  _qlight_type.py  _utils.py
tests/: test_basic.py  test_no_bound.py  test_qlight_type.py  test_with_pydantic.py
tests/test_query/: test_and.py  test_length_q.py  test_logical.py  test_numeric.py  test_string_q.py
